# da6401_assignment_2

./: .gitignore  README.md  mypy.ini  pyproject.toml
src/da6401_assignment_2/: __init__.py  dataloader.py
src/da6401_assignment_2/partA/: model.py  train.py
src/da6401_assignment_2/partB/: __init__.py  model.py  test.ipynb  train.py
